ChatCompletion: introducing /v1/cancel/{chatcompletion id}
- Adding endpoint that let's clients to cancel an ongoing
  request from a chat completion session.
- Expected behavior: Client knows which chat completion ID
  it's using from the ChatCompletion Object it gets for the
  first request and uses this chatcompletion id to cancel the
  request.
- Request cancellation happens asynchronously but server makes
  sure that conversation session's integrity remains unchanged.
- The server then returns partial text to client.
